@startuml

skinparam classAttributeIconSize 0

class Node
class DoublyNode
class DoublyLinkedList

' Relación de Herencia: DoublyNode hereda de Node
Node <|-- DoublyNode

' Relación de Asociación/Uso: DoublyLinkedList usa DoublyNode para su cabeza y cola
DoublyLinkedList --> DoublyNode : "head, tail"

@enduml